--- a/Simulator/Web.config
+++ b/Simulator/Web.config
@@ -10,6 +10,8 @@
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   <system.webServer>
+    <directoryBrowse enabled="true" />
+    <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
       <remove name="OPTIONSVerbHandler"/>
