--- a/Simulator/Web.config
+++ b/Simulator/Web.config
@@ -10,6 +10,13 @@
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+      </customHeaders>
+    </httpProtocol>
     <directoryBrowse enabled="true" />
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
